Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5
-
None
-
-
efd00066b (dev), 56c8ed47a (6.7), 73238aa6c (tqtc/lts-6.5)
Description
See the attached MWE. The screen reader registers only changes to visible == false. The states visible == true, ignored == false and ignored == true are only updated when other events trigger an update of the parent.
There are two causes for this behavior:
1. QAccessible::ObjectShow events are not considered in QAndroidPlatformAccessibility and the whole chain up to QtAccessibilityDelegate.java
2. QQuickAccessibleAttached does not send QAccessibleEvents for updates of the "ignored" property