Android: Propagate a11y ObjectShow events to screen reader

Sending an ObjectShow event, e.g. by setting QQuickItem::visible to
true, has to trigger a refresh of the screen reader hierarchy. If the
signal is ignored the source of the signal will be ignored by the
screen reader.

Fixes: QTBUG-122436
Change-Id: I32ee2e8b2602cd0dd9b9a83ff1fe426d88d137a8
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>
(cherry picked from commit efd00066b42d9cbd3a85336f4851213d94cdc28e)
(cherry picked from commit 56c8ed47a146cf5d13ea1297d9da836869013ece)