src/android/jar/src/org/qtproject/qt/android/QtActivityDelegateBase.java
@@ -175,6 +175,14 @@ abstract class QtActivityDelegateBase
     }
 
     @UsedFromNativeCode
+    public void notifyObjectShow(int parentId)
+    {
+        if (m_accessibilityDelegate == null)
+           return;
+        m_accessibilityDelegate.notifyObjectShow(parentId);
+    }
+
+    @UsedFromNativeCode
     public void notifyObjectFocus(int viewId)
     {
         if (m_accessibilityDelegate == null)
